--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
     "@reduxjs/toolkit": "^1.9.6",
@@ -18,8 +19,9 @@
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
