--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@emotion/react": "^11.11.3",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "form-data": "^4.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "i": "^0.3.7",
+    "jwt-decode": "^4.0.0",
     "npm": "^10.1.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
@@ -22,6 +26,7 @@
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
